Change the uri module to issue the http request on the same machine using the output of template module command.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,7 @@
     dest: '/tmp/{{ test_name }}.yaml'
 - name: Upload benchmark template
   uri:
+    remote_src: yes
     src: '/tmp/{{ test_name }}.yaml'
     method: POST
     headers:
