--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,7 +30,7 @@
     test_files: []
 - name: Upload benchmark template 
   shell:
-      "{{ lookup('template', 'curl.j2') }} \
+      "{{ lookup('template', 'templates/curl.j2') }} \
     http://{{ hyperfoil_controller_host }}:{{ hyperfoil_controller_port }}/benchmark"
   register: curl_cmd
   failed_when: curl_cmd.rc > 1
